# DataOrganiser

./: PROJECT_WALKTHROUGH.md  architecture.md  pyproject.toml  requirements.txt  run.py
src/: main.py
src/classifiers/: llm_classifier.py  pipeline.py  rule_based.py
src/core/: cache.py  config.py  models.py  organizer.py  scanner.py  watcher.py
src/ui/: main_window.py  workers.py
src/utils/: extractors.py
tests/: test_classifiers.py  test_models.py  test_organizer.py
